docs: add documentation with swagger for create and delete method
