# handler/deleteOportunity.go
@@ -8,6 +8,19 @@ import (
 	"github.com/iamrosada/go-rest-api/schemas"
 )
 
+// @BasePath /api/v1
+
+// @Summary Delete oportunity
+// @Description Delete a new job oportunity
+// @Tags Oportunities
+// @Accept json
+// @Produce json
+// @Param request body DeleteOportunityRequest true "Request body"
+// @Success 200 {object} DeleteOportunityResponse
+// @Failure 400 {object} ErrorResponse
+// @Failure 404 {object} ErrorResponse
+// @Router /oportunity [delete]
+
 func DeleteOportunityHandler(ctx *gin.Context) {
 	id := ctx.Query("id")
 
